--- a/css/style.css
+++ b/css/style.css
@@ -1053,7 +1053,7 @@ input[type=date]{color: #fff !important;}
 .get-wrap .title h1{font-size: 62px; color: #fff; font-weight: bold;}
 .get-wrap .title:after{left: 50%; margin-left: -28px; bottom: -24px;}
 .get-wrap p{color: #fff; font-size: 16px; padding: 0 140px;}
-.callText{font-size: 24px; color:#fff; font-family: 'Montserrat', sans-serif;}
+.callText{margin-bottom: 30px;font-size: 24px; color:#fff; font-family: 'Montserrat', sans-serif;}
 .get-wrap .phonewrp{position: relative; display: inline-block; padding-left: 85px; margin-top: 20px;}
 .get-wrap .phonewrp a{text-decoration: none; font-size: 30px; color: #fff; font-family: 'Montserrat', sans-serif; font-weight: 600;}
 .get-wrap .phonewrp:before{content: ""; background: url(../images/phone_icon.png) no-repeat top; background-size: cover; width: 50px; height: 50px; position: absolute; top: 10px; left: 0;}
